FIX: right gap removed in comment block

--- a/src/styles/_posts.scss
+++ b/src/styles/_posts.scss
@@ -1020,7 +1020,7 @@
   &-body {
     margin-bottom: 3px;
     word-break: break-word;
-    padding-right: 30px;
+    //padding-right: 30px;
 
     &:last-child {
       margin-bottom: 0;
